# dezlylabs

./: README.md
rust-lab/06-api-design/topic-01-using-the-rocket-framework/rocket-app/: Cargo.toml  README.md
rust-lab/06-api-design/topic-01-using-the-rocket-framework/rocket-app/src/: main.rs
rust/rust-lab/: Cargo.toml  rustfmt.toml
rust/rust-lab/01-basic-variable-types/topic-01-scalar-data-types/: Cargo.toml
rust/rust-lab/01-basic-variable-types/topic-02-deterministic-destruction/src/: main.rs
rust/rust-lab/01-basic-variable-types/topic-03-making-variables-mutable/: Cargo.toml
rust/rust-lab/01-basic-variable-types/topic-04-constants/src/: main.rs
rust/rust-lab/01-basic-variable-types/topic-05-shadowing/src/: main.rs
rust/rust-lab/02-enums/topic-01-enum-basics/: Cargo.toml
rust/rust-lab/03-environment-variables/topic-01-system-environment-variables/: Cargo.toml
rust/rust-lab/04-control-flow/topic-03-if-else-if-else-statement/: Cargo.toml
rust/rust-lab/04-functional-programming/topic-01-higher-order-functions/: Cargo.toml
rust/rust-lab/04-functional-programming/topic-02-named-closures/: Cargo.toml
rust/rust-lab/04-functional-programming/topic-03-annoymous-closures/: Cargo.toml
rust/rust-lab/04-pointers/topic-01-basics-of-smart-pointers/: Cargo.toml
rust/rust-lab/05-functions/topic-01-rust-does-not-support-function-overloading/: Cargo.toml
rust/rust-lab/05-threads/topic-01-creating-a-thread/: Cargo.toml
rust/rust-lab/06-iterators/topic-03-the-dot-any-method/: Cargo.toml
rust/rust-lab/07-enums-and-error-handling/topic-02-bringing-enum-variants-into-scope/: Cargo.toml
rust/rust-lab/07-enums-and-error-handling/topic-02-enum-with-custom-discriminant-values/: Cargo.toml
rust/rust-lab/07-enums-and-error-handling/topic-03-adding-methods-to-enums/: Cargo.toml
rust/rust-lab/07-enums-and-error-handling/topic-03-discriminant-values/: Cargo.toml
rust/rust-lab/07-enums-and-error-handling/topic-04-enum-with-custom-discriminant-values/: Cargo.toml
rust/rust-lab/07-enums-and-error-handling/topic-04-explicitly-calling-panic/: Cargo.toml
rust/rust-lab/07-enums-and-error-handling/topic-05-error-handling/: Cargo.toml
rust/rust-lab/07-enums-and-error-handling/topic-07-enums-with-struct-variants/: Cargo.toml
rust/rust-lab/07-enums-and-error-handling/topic-08-explicitly-calling-panic/: Cargo.toml
rust/rust-lab/07-enums-and-error-handling/topic-09-error-handling/: Cargo.toml
rust/rust-lab/08-structs/topic-01-a/: Cargo.toml
rust/rust-lab/08-structs/topic-02-the-new-method/: Cargo.toml
rust/rust-lab/11-iterators/topic-02-the-dot-next-method/: Cargo.toml
rust/rust-lab/11-threads/topic-02-putting-a-thread-to-sleep/: Cargo.toml
rust/rust-lab/11-threads/topic-03-join-handle/: Cargo.toml
rust/rust-lab/13-web-servers-and-apis/topic-01-minimal-http-server/: Cargo.toml
rust/rust-lab/13-web-servers-and-apis/topic-01-serving-static-html-with-tokio-and-axum/: Cargo.toml
rust/rust-lab/13-web-servers-and-apis/topic-02/: Cargo.toml
rust/rust-lab/14-meta-programming/topic-04-a-macro-for-getting-user-input/: Cargo.toml
rust/rust-lab/15-interactive-cli-programming/topic-02-using-the-read-line-method/: Cargo.toml
rust/rust-lab/15-interactive-cli-programming/topic-02-using-the-stdin-instance/: Cargo.toml
rust/rust-lab/src/: main.rs
rust/rust-lab/topic-01-vectors/: Cargo.toml
rust/rust-lab/topic-01-vectors/src/: main.rs
software-engineering/python/python-lab/topic-03-apis/: pyproject.toml
(+722 files in other folders)
