[package]
name = "rust_lab"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"

members = [
  "01-basic-variable-types/*",
  "02-environment-variables/*",
  "03-pointers/*",
  "04-vectors/*",
  "05-enums/*", "05-functions/topic-01-rust-does-not-support-function-overloading",
  "06-functional-programming/*",
  "07-iterators/*",
  "08-threads/*"
]

[workspace.dependencies]
