[package]
name = "rust_lab"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"

members = [
  "01-basic-variable-types/*",
  "02-environment-variables/*",
  "03-control-flow/*",
  "04-pointers/*",
  "05-vectors/*",
  "06-enums/*",
  "07-functions/*",
  "08-structs/*",
  "09-functional-programming/*",
  "10-iterators/*",
  "11-threads/*"
]

[workspace.dependencies]
