[package]
name = "rust_lab"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"

members = [
  "01-basic-variable-types/*",
  "02-strings/*",
  "03-environment-variables/*",
  "04-control-flow/*",
  "05-references-and-pointers/",
  "06-vectors/*",
  "07-enums/*",
  "08-functions/*",
  "09-structs/*",
  "10-functional-programming/*",
  "11-iterators/*",
  "12-threads/*",
  "13-web-servers-and-apis/*"
]

[workspace.dependencies]
